# MsNewsGroup.com

./: .gitignore  README.md  pyproject.toml
.github/workflows/: audit.yml
docs/: bing_news_wp_checklist.md  google_news_wp_checklist.md  newsbreak_wp_feed_playbook.md  schema_validation_playbook.md
reports/: latest.json  latest.md
src/wp_news_ops/: __init__.py  __main__.py  audit.py  cli.py  reporting.py
